# signalsnoop

./: .dockerignore  .gitignore  Dockerfile  Makefile  get_signal.bt  go.mod  go.sum  main.go  maps_monitor.go  signalsnoop_bpfel_arm64.go  signalsnoop_bpfel_x86.go
bpf/: CMakeLists.txt  compile_commands.json  signalsnoop.c
tests/: Makefile  bad_stack_test  bad_stack_test.c  sigsegv_test  sigsegv_test.c  stack_push_deref_test  stack_push_deref_test.c
